@@ -1,54 +1,49 @@
-USBDEVFS_CONNECTINFO 0 0E00000000000000
-USBDEVFS_CONNECTINFO 0 0F00000000000000
 USBDEVFS_REAPURBNDELAY 0 3 2 0 0 16 16 0 10000000010002100000000001000000
- USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 12 0 0C0000000300012000000000
+USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 12 0 0C0000000300012000000000
 USBDEVFS_REAPURBNDELAY 0 3 2 0 0 12 12 0 0C0000000100011001000000
  USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 405 0 950100000200011001000000640006000000640000000034000000141015101610171001100210031013901F900410051006100710081009100A101B100C100D100B100F101210019021901B901E90199006901C9002904C9024902590389039903A903B904B905E900E900F901090119001980298039804980598509051905C905D90100000000140024003400440054006400740084009400A400B400C400E4001C005C00AC01400000045D04AD02ED02FD002D003D034D047D046D02DD02CD030D049D032D033D031D050D002D406D407D40100000001380B0000000130023006300A3008300138003801B103B104B101BF0B430061006E006F006E00200049006E0063002E00000019430061006E006F006E00200050006F00770065007200530068006F00740020005300580032003000300020004900530000000A31002D0036002E0030002E0031002E003000000021430037003600370046003100430037003100340031003700340043003300300039003200350035004600370030004500340041003700420032004500450032000000
   USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 12 0 0C0000000300012001000000
-USBDEVFS_REAPURBNDELAY 0 3 2 0 0 12 12 0 0C0000000100041002000000
- USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 20 0 1400000002000410020000000100000001000100
+USBDEVFS_REAPURBNDELAY 0 3 2 0 0 24 24 0 180000000100071002000000FFFFFFFF00000000FFFFFFFF
+ USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 20 0 1400000002000710020000000100000000000800
   USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 12 0 0C0000000300012002000000
-USBDEVFS_REAPURBNDELAY 0 3 2 0 0 24 24 0 180000000100071003000000FFFFFFFF0000000000000000
- USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 60 0 3C00000002000710030000000B0000000000080000009001F10590010106900111069001210690013106900141069001510690016106900171069001
+USBDEVFS_REAPURBNDELAY 0 3 2 0 0 12 12 0 0C0000000100041003000000
+ USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 20 0 1400000002000410030000000100000001000100
   USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 12 0 0C0000000300012003000000
-USBDEVFS_REAPURBNDELAY 0 3 2 0 0 16 16 0 10000000010008100400000000000800
- USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 78 0 4E000000020008100400000001000100013000000000000000000000000000000000000000000000000000000000000000000000000001000100000000000000054400430049004D000000000000
+USBDEVFS_REAPURBNDELAY 0 3 2 0 0 24 24 0 1800000001000710040000000100010000000000FFFFFFFF
+ USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 20 0 1400000002000710040000000100000000000800
   USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 12 0 0C0000000300012004000000
-USBDEVFS_REAPURBNDELAY 0 3 2 0 0 16 16 0 10000000010008100500000000009001
- USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 86 0 5600000002000810050000000100010001300000000000000000000000000000000000000000000000000000000000000000000008000100010000000000000009310030003000430041004E004F004E000000000000
+USBDEVFS_REAPURBNDELAY 0 3 2 0 0 12 12 0 0C0000000100041005000000
+ USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 20 0 1400000002000410050000000100000001000100
   USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 12 0 0C0000000300012005000000
-USBDEVFS_REAPURBNDELAY 0 3 2 0 0 16 16 0 100000000100081006000000F1059001
- USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 130 0 82000000020008100600000001000100013800004D9D1900083832130000A000000078000000C00C0000900900000000000000009001000001000000000000000D49004D0047005F0030003000390035002E004A00500047000000123200300031003200310031003200340054003100360033003700330032002E00300000000000
+USBDEVFS_REAPURBNDELAY 0 3 2 0 0 16 16 0 10000000010008100600000000000800
+ USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 78 0 4E000000020008100600000001000100013000000000000000000000000000000000000000000000000000000000000000000000000001000100000000000000054400430049004D000000000000
   USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 12 0 0C0000000300012006000000
-USBDEVFS_REAPURBNDELAY 0 3 2 0 0 16 16 0 10000000010008100700000001069001
- USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 130 0 8200000002000810070000000100010001380000EA111A0008384C120000A000000078000000C00C0000900900000000000000009001000001000000000000000D49004D0047005F0030003000390036002E004A00500047000000123200300031003200310031003200340054003100360033003700340038002E00300000000000
-  USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 12 0 0C0000000300012007000000
-USBDEVFS_REAPURBNDELAY 0 3 2 0 0 16 16 0 10000000010008100800000011069001
- USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 130 0 8200000002000810080000000100010001380000B4321B000838EC150000A000000078000000C00C0000900900000000000000009001000001000000000000000D49004D0047005F0030003000390037002E004A00500047000000123200300031003200310031003200340054003100360033003800300030002E00300000000000
+USBDEVFS_REAPURBNDELAY 0 3 2 0 0 28 28 0 1C000000010021900700000001000100000000000000000000000800
+ USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 40 0 280000000200219007000000000008000130100000000098F0884B4443494D000000000000000000
+  USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 16 0 10000000030001200700000001000000
+USBDEVFS_REAPURBNDELAY 0 3 2 0 0 24 24 0 180000000100071008000000010001000000000000000800
+ USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 20 0 1400000002000710080000000100000000009001
   USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 12 0 0C0000000300012008000000
-USBDEVFS_REAPURBNDELAY 0 3 2 0 0 16 16 0 10000000010008100900000021069001
- USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 130 0 8200000002000810090000000100010001380000CFBC14000838EF0B0000A000000078000000C00C0000900900000000000000009001000001000000000000000D49004D0047005F0030003000390038002E004A00500047000000123200300031003200310031003200350054003100350034003600320035002E00300000000000
+USBDEVFS_REAPURBNDELAY 0 3 2 0 0 16 16 0 10000000010008100900000000009001
+ USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 86 0 5600000002000810090000000100010001300000000000000000000000000000000000000000000000000000000000000000000008000100010000000000000009310030003000430041004E004F004E000000000000
   USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 12 0 0C0000000300012009000000
-USBDEVFS_REAPURBNDELAY 0 3 2 0 0 16 16 0 10000000010008100A00000031069001
- USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 130 0 82000000020008100A0000000100010001380000D02614000838F40D0000A000000078000000C00C0000900900000000000000009001000001000000000000000D49004D0047005F0030003000390039002E004A00500047000000123200300031003200310031003200350054003100350034003600340037002E00300000000000
-  USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 12 0 0C000000030001200A000000
-USBDEVFS_REAPURBNDELAY 0 3 2 0 0 16 16 0 10000000010008100B00000041069001
- USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 130 0 82000000020008100B0000000100010001380000498D24000838BC180000A000000078000000C00C0000900900000000000000009001000001000000000000000D49004D0047005F0030003100300030002E004A00500047000000123200300031003200310032003000310054003100380035003500310030002E00300000000000
+USBDEVFS_REAPURBNDELAY 0 3 2 0 0 28 28 0 1C000000010021900A00000001000100000000000000080000009001
+ USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 40 0 28000000020021900A0000000000900101301000000000120AF95131303043414E4F4E0000000000
+  USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 16 0 10000000030001200A00000001000000
+USBDEVFS_REAPURBNDELAY 0 3 2 0 0 24 24 0 18000000010007100B000000010001000000000000009001
+ USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 24 0 18000000020007100B000000020000001100900121009001
   USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 12 0 0C000000030001200B000000
-USBDEVFS_REAPURBNDELAY 0 3 2 0 0 16 16 0 10000000010008100C00000051069001
- USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 130 0 82000000020008100C00000001000100013800008CEF1D000838BD150000A000000078000000C00C0000900900000000000000009001000001000000000000000D49004D0047005F0030003100300031002E004A00500047000000123200300031003200310032003000310054003100380035003500330030002E00300000000000
+USBDEVFS_REAPURBNDELAY 0 3 2 0 0 16 16 0 10000000010008100C00000011009001
+ USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 94 0 5E000000020008100C000000010001000138000037100000000000000000000000000000000000000000000000000000000000009001000001000000000000000D49004D0047005F0030003000300031002E004A00500047000000000000
   USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 12 0 0C000000030001200C000000
-USBDEVFS_REAPURBNDELAY 0 3 2 0 0 16 16 0 10000000010008100D00000061069001
- USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 130 0 82000000020008100D00000001000100013800001AA51F00083870110000A000000078000000C00C0000900900000000000000009001000001000000000000000D49004D0047005F0030003100300032002E004A00500047000000123200300031003200310032003000310054003100380035003600310038002E00300000000000
-  USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 12 0 0C000000030001200D000000
-USBDEVFS_REAPURBNDELAY 0 3 2 0 0 16 16 0 10000000010008100E00000071069001
- USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 130 0 82000000020008100E0000000100010001380000D2471C0008389A140000A000000078000000C00C0000900900000000000000009001000001000000000000000D49004D0047005F0030003100300033002E004A00500047000000123200300031003300300032003000390054003100320032003100330030002E00300000000000
+USBDEVFS_REAPURBNDELAY 0 3 2 0 0 28 28 0 1C000000010021900D00000001000100000000000000900111009001
+ USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 40 0 28000000020021900D0000001100900101380037100000120AF951494D475F303030312E4A504700
+  USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 16 0 10000000030001200D00000001000000
+USBDEVFS_REAPURBNDELAY 0 3 2 0 0 16 16 0 10000000010008100E00000021009001
+ USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 94 0 5E000000020008100E00000001000100013800003D170000000000000000000000000000000000000000000000000000000000009001000001000000000000000D49004D0047005F0030003000300032002E004A00500047000000000000
   USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 12 0 0C000000030001200E000000
-USBDEVFS_REAPURBNDELAY 0 3 2 0 0 28 28 0 1C000000010021900F00000001000100000000000000080000000000
- USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 40 0 28000000020021900F00000000009001013010000000006023BB5031303043414E4F4E0000000000
+USBDEVFS_REAPURBNDELAY 0 3 2 0 0 28 28 0 1C000000010021900F00000001000100000000000000900121009001
+ USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 40 0 28000000020021900F000000210090010138003D170000120AF951494D475F303030322E4A504700
   USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 16 0 10000000030001200F00000001000000
-USBDEVFS_REAPURBNDELAY 0 3 2 0 0 28 28 0 1C000000010021901000000001000100000000000000900100000000
- USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 264 0 080100000200219010000000F10590010138204D9D1900CCF7B050494D475F303039352E4A50470001069001013820EA111A00DCF7B050494D475F303039362E4A50470011069001013820B4321B00E8F7B050494D475F303039372E4A50470021069001013800CFBC1400503DB250494D475F303039382E4A50470031069001013800D0261400663DB250494D475F303039392E4A50470041069001013800498D24008E52BA50494D475F303130302E4A504700510690010138008CEF1D00A252BA50494D475F303130312E4A504700610690010138001AA51F00D252BA50494D475F303130322E4A50470071069001013800D2471C004A3F1651494D475F303130332E4A504700
-  USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 16 0 10000000030001201000000009000000
-USBDEVFS_REAPURBNDELAY 0 3 2 0 0 12 12 0 0C0000000100031011000000
- USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 12 0 0C0000000300012011000000
+USBDEVFS_REAPURBNDELAY 0 3 2 0 0 12 12 0 0C0000000100031010000000
+ USBDEVFS_REAPURBNDELAY 0 3 129 0 0 512 12 0 0C0000000300012010000000
